<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quipmate</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="quipmate_image">Quipmate Image</string>
    <string name="OK">OK</string>
    <string name="network_error">Connect your device to internet to continue.</string>
    <string name="error">error</string>
    <string name="code">code</string>
    <string name="invalid_credential">Wrong email or password</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_friends_fragment">FriendsFragmentActivity</string>
    <string name="search_friend">Search a Friend</string>
	<string name="pimage">Profile Image</string>
</resources>